--- a/css/styles.css
+++ b/css/styles.css
@@ -126,7 +126,11 @@ li a:hover {
 .submenu {
     background-color: burlywood
 }
+
+
 .watch-grid {
+    
+    height: 100%;
     display: grid;
     grid-template-columns: 50% 50%;
     grid-template-rows: auto;
@@ -135,13 +139,21 @@ li a:hover {
 }
 
 .watch {
-    width: 47vw;
+    width: 100%;
+    height: auto;
     margin: 0 auto 30px;
 }
 
 .watch-image {
+    height:300px;
+    object-fit:cover;
+    object-position: center center;
     display: block;
-    width: 47vw;
+    
+}
+.watch-image:hover {
+     box-shadow: 0 0 10px 10px rgba(0, 140, 186, 0.5);   
+    
 }
 
 .watch-info {
